# voice-agent-trial

./: .env.example  .gitignore  PRD.md  README.md  dictation_server.py  docker-compose.yml  pyproject.toml  voice_agent.py  voice_dictation.py
client/: .env.example  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
client/src/: App.tsx  env.ts  index.css  main.tsx  vite-env.d.ts
client/src/components/: ConnectButton.tsx  DebugDisplay.tsx  NetworkStats.tsx  NetworkStatsGraph.tsx  VoiceInterface.tsx
client/src/config/: pipecatConfig.ts
client/src/hooks/: useNetworkStats.ts
client/src/pages/: DailyPage.tsx  WebRTCPage.tsx
client/src/providers/: DailyProvider.tsx  SmallWebRTCProvider.tsx
client/src/types/: network-stats.ts
config/: __init__.py  settings.py
docs/: DAILY_TRANSPORT_PR_GUIDE.md  audio_loopback_setup.md  webrtc_stats_research.md
electron-dictation/: .gitignore  README.md  biome.json  electron.vite.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json
electron-dictation/src/main/: index.ts
electron-dictation/src/preload/: index.ts
electron-dictation/src/renderer/: App.tsx  OverlayApp.tsx  app.css  index.html  overlay-main.tsx  overlay.html  styles.css
processors/: __init__.py  auto_formatter.py  llm_cleanup.py  text_inserter.py  transcription_buffer.py
services/: __init__.py  dictation_service.py  extended_daily_transport.py  llm_service.py  stt_service.py  transport.py  tts_service.py
tools/: __init__.py  network_stats_viewer.py  transcribe_cli.py  view_stats.sh
utils/: __init__.py  logger.py  network_stats_writer.py  tracing.py
